--- a/kube-web01-deployment.yaml
+++ b/kube-web01-deployment.yaml
@@ -1,19 +1,21 @@
-apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web01-deployment
+  name: php
+  labels:
+    tier: backend
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: web01
-  replicas: 1 # tells deployment to run 2 pods matching the template
+      app: php
+      tier: backend
   template:
     metadata:
       labels:
-        app: web01
+        app: php
+        tier: backend
     spec:
       containers:
       - name: php
-        image: php:latest
-        ports:
-        - containerPort: 80
+        image: php:7-fpm
