--- a/kube-web01-svc.yaml
+++ b/kube-web01-svc.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: web01-svc
+  name: php
+  labels:
+    tier: backend
 spec:
-  type: LoadBalancer
   selector:
-    app: web01
+    app: php
+    tier: backend
   ports:
   - protocol: TCP
-    port: 80
-    targetPort: 8090
+    port: 9000
